@@ -161,24 +161,6 @@ void ReplayRobHouseGridDisplay::playAtFullSpeed() {
     mFasterButton.setVisible( false );
     mPlayButton.setVisible( false );
     mStepButton.setVisible( false );
-
-    // hack:  make whole view area visible, always, to allow
-    // all tool targetting without recomputing visibility each step
-    // (speeds up steps by a factor of 4 or more).
-    //
-    // Note that this will mistakenly allow extra tool targetting (around
-    // corners to reachable areas that aren't actually visible), which may allow
-    // an innocuous kind of cheat (shooting something around a corner that is
-    // not visible).  But it's worth it to gain the speed up here
-    int i = 0;
-    for( int y=0; y<HOUSE_D; y++ ) {
-        for( int x=0; x<HOUSE_D; x++ ) {
-            
-            mTileVisibleMap[i] = true;
-            
-            i++;
-            }
-        }
     }
 
 
@@ -379,11 +361,6 @@ void ReplayRobHouseGridDisplay::actionPerformed( GUIComponent *inTarget ) {
 
 
 void ReplayRobHouseGridDisplay::recomputeVisibility() {
-    if( mFullSpeed ) {
-        // skip recomputing visiblity entirely when simulating at full speed
-        // hack is to let entire screen area be visible.
-        return;
-        }
 
     RobHouseGridDisplay::recomputeVisibility();
     
